@startuml
skinparam packageStyle rectangle
hide empty members
hide stereotype
hide circle

class "d(TAG) { "Debug" }" as Debug
class "i(TAG) { "Info" }" as Info
class "w(TAG) { "Warning" }" as Warn
class "e(TAG, exception) { "Error" }" as Error
class "log(TAG, LogLevel, ...)" as Log

Debug -[dotted]- Log : >
Info -[dotted]- Log : >
Warn -[dotted]- Log : >
Error -[dotted]- Log : >

interface LogSink {
    {abstract} log(TAG, LogLevel, ...)
}

package android {
    class AndroidLogSink
}

package common {
    class PrintlnSink
    class MemoryRingSink
}

LogSink <|.. PrintlnSink
LogSink <|.. MemoryRingSink
LogSink <|.. AndroidLogSink

Log "1" -[dotted]- "N" LogSink : >
@enduml